--- a/src/components/PostList.css
+++ b/src/components/PostList.css
@@ -1,10 +1,11 @@
 /*게시글*/
 .post-list-item {
     display: flex;
+    width: 90rem;
     height: 3.3125rem;
     padding: 0.9375rem 0;
     align-items: center;
-    gap: 1.5rem;
+    justify-content: center;
     border-bottom: 1px solid #888;
     background: #FFF;
 }
@@ -17,12 +18,18 @@
     width: 75rem;
     justify-content: space-between;
     align-items: center;
+    padding: 0 1rem;
 }
 /*게시글-Frame11-글제목*/
-.post-list-item-title h2 {
+.post-list-item-title {
     width: 24rem;
-    height: 1.5rem;
     flex-shrink: 0;
+    padding-left: 0.5rem;
+}
+
+.post-list-item-title h2 {
+    width: 100%;
+    height: 1.5rem;
 
     overflow: hidden;
     color: #000;
@@ -33,6 +40,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin: 0;
 }
 /*게시글-Frame11-글정보*/
 .post-list-item-infos {
@@ -53,20 +61,6 @@
     text-align: center;
     font-family: Inter;
     font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.post-list-item-title {
-    width: 4.875rem;
-    height: 1.5rem;
-    flex-shrink: 0;
-
-    color: #888;
-    text-align: center;
-    font-family: Inter;
-    font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
