--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
-*{
-  margin:0;
-  padding:0;
+@import "tailwindcss";
+
+:root {
+  --primary-color: #E30613;
+  /* 자람 로고의 붉은색 */
+  --text-color: #333333;
+  /* 기본 검은 글씨 */
+  --border-color: #EEEEEE;
+  /* 연한 테두리 */
+  --bg-gray: #F5F5F5;
+  /* 검색창 배경 회색 */
+}
+
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
